@@ -45,6 +45,9 @@
       <para>May 6th, 2012</para>
       <itemizedlist>
         <listitem>
+          <para>[bdubbs] - Updated to exim-4.77.</para>
+        </listitem>
+        <listitem>
           <para>[bdubbs] - Updated to xmlto-0.0.25.</para>
         </listitem>
         <listitem>
