@@ -1,24 +1,44 @@
 #!/bin/sh
-# Begin $rc_base/init.d/exim
+########################################################################
+# Begin exim
+#
+# Description : Starts Postfix Mail Trasfer Agent
+#
+# Author      : Bruce Dubbs - bdubbs@linuxfromscratch.org
+#
+# Version     : LFS 7.0
+#
+########################################################################
 
-# Based on sysklogd script from LFS-3.1 and earlier.
-# Rewritten by Gerard Beekmans  - gerard@linuxfromscratch.org
+### BEGIN INIT INFO
+# Provides:            exim
+# Required-Start:      $syslog $local_fs $network
+# Should-Start:        $remote_fs openldap mysql postgresql saslauthd
+# Required-Stop:       $network
+# Should-Stop:         $remote_fs openldap mysql postgresql saslauthd
+# Default-Start:       3 4 5
+# Default-Stop:        0 1 2 6
+# Short-Description:   Exim MTA
+# Description:         Controls the Exim Mail Transfer Agent
+# X-LFS-Provided-By:   BLFS / LFS 7.0
+### END INIT INFO
+
+. /lib/lsb/init-functions
 
 #$LastChangedBy$
 #$Date$
 
-. /etc/sysconfig/rc
-. $rc_functions
-
 case "$1" in
 	start)
-		boot_mesg "Starting exim..."
-		loadproc /usr/sbin/exim -bd -q15m
+		log_info_msg "Starting Exim..."
+		start_daemon /usr/sbin/exim -bd -q15m
+      evaluate_retval
 		;;
 
 	stop)
-		boot_mesg "Stopping exim..."
+		log_info_msg "Stopping exim..."
 		killproc /usr/sbin/exim
+      evaluate_retval
 		;;
 
 	status)
@@ -37,4 +57,4 @@ case "$1" in
 		;;
 esac
 
-# End $rc_base/init.d/exim
+# End /etc/init.d/exim
